# gean

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  config.yaml  gen_keys.go  node0.key  node1.key  node2.key  nodes.yaml
.github/workflows/: lint-format.yml  spec-tests.yml
chain/forkchoice/: aggregation.go  attestation.go  block.go  ghost.go  helpers.go  produce.go  store.go  time.go
chain/statetransition/: bitlist.go  genesis.go  process_attestations.go  transition.go
cmd/gean/: main.go
cmd/keygen/: main.go
config/: genesis.go  validators.go  validators_test.go
leansig/: keystore.go  leansig.go  leansig_test.go
leansig-ffi/: Cargo.toml
leansig-ffi/include/: leansig_ffi.h
leansig-ffi/src/: lib.rs
network/: host.go
network/gossipsub/: encoding.go  gossip.go  handler.go
network/p2p/: discovery.go
network/reqresp/: client.go  codec.go  messages.go  protocol_test.go  reqresp.go  server.go
node/: clock.go  handler.go  lifecycle.go  node.go  sync.go  ticker.go  validator.go  validator_test.go
observability/logging/: logger.go
observability/metrics/: metrics.go
spectests/: fixture_types.go
test/integration/: stf_test.go
test/interop/: genesis_test.go  ssz_test.go
types/: aggregated_attestation.go  block.go  block_encoding.go  checkpoint_encoding.go  config.go  config_encoding.go  constants.go  containers_encoding.go  generate.go  state.go  state_encoding.go  vote.go  vote_encoding.go
xmss/leansig-ffi/: Cargo.toml  build.rs  cbindgen.toml
xmss/leansig-ffi/include/: leansig_ffi.h
xmss/leansig-ffi/src/: lib.rs
(+20 files in other folders)
